[package]
name = "bw_http_forwarder"
version = "0.1.0"
authors = ["Ezro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7" }
reqwest = { version = "0.12.8" }
tokio = { version = "1.40", features = ["full"] }
